# toast

./: .gitignore  Cargo.toml  README.md  flake.nix  run_qemu.sh
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
