[package]
name = "toast"
version = "0.1.0"
edition = "2024"

# this profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# this profile used for 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "toast"
test = false
bench = false

[dependencies]
x86_64 = "0.14"
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
